feat:Created context for reloading sidebar data
