# Electron/src/swagger/api/services/GenresService.ts
@@ -6,16 +6,16 @@ import type { CancelablePromise } from '../core/CancelablePromise';
 import { OpenAPI } from '../core/OpenAPI';
 import { request as __request } from '../core/request';
 export class GenresService {
-    /**
-     * Get Genres
-     * Get all genres and their string representation
-     * @returns any Successful Response
-     * @throws ApiError
-     */
-    public static getGenresGenresGet(): CancelablePromise<any> {
-        return __request(OpenAPI, {
-            method: 'GET',
-            url: '/genres/',
-        });
-    }
+  /**
+   * Get Genres
+   * Get all genres and their string representation
+   * @returns any Successful Response
+   * @throws ApiError
+   */
+  public static getGenresGenresGet(): CancelablePromise<any> {
+    return __request(OpenAPI, {
+      method: 'GET',
+      url: '/genres/',
+    });
+  }
 }
