# Electron/src/swagger/api/services/HealthService.ts
@@ -6,20 +6,20 @@ import type { CancelablePromise } from '../core/CancelablePromise';
 import { OpenAPI } from '../core/OpenAPI';
 import { request as __request } from '../core/request';
 export class HealthService {
-    /**
-     * Health Check Endpoint
-     * Validates if the app has launched correctly
-     *
-     * Returns
-     * -------
-     * Response 200 OK
-     * @returns any Successful Response
-     * @throws ApiError
-     */
-    public static getHealthHealthGet(): CancelablePromise<any> {
-        return __request(OpenAPI, {
-            method: 'GET',
-            url: '/health/',
-        });
-    }
+  /**
+   * Health Check Endpoint
+   * Validates if the app has launched correctly
+   *
+   * Returns
+   * -------
+   * Response 200 OK
+   * @returns any Successful Response
+   * @throws ApiError
+   */
+  public static getHealthHealthGet(): CancelablePromise<any> {
+    return __request(OpenAPI, {
+      method: 'GET',
+      url: '/health/',
+    });
+  }
 }
